Projet GL/Projet_GL/src/test/deca/context/invalid/increment7/cast-int-to-bool.deca
//Rule : 3.39

//Resultats : can't cast an integer into a boolean

// Historique : cree le 09/01/2023


{
    int a = 2;
    boolean b;

    //Must be refused
    b = (boolean) a;
}